--- a/第四回：文字图例尽眉目.ipynb
+++ b/第四回：文字图例尽眉目.ipynb
@@ -1832,7 +1832,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Tick Formatters"
+    "#### Tick Formatters"
    ]
   },
   {
@@ -1908,7 +1908,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Tick Locators "
+    "#### Tick Locators "
    ]
   },
   {
