--- a/第二回：艺术画笔见乾坤.ipynb
+++ b/第二回：艺术画笔见乾坤.ipynb
@@ -710,8 +710,8 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np \n",
-    "x=np.random.randint(0,100,100) #生成【0-100】之间的100个数据,即 数据集 \n",
-    "bins=np.arange(0,101,10) #设置连续的边界值，即直方图的分布区间[0,10],[10,20]... \n",
+    "x=np.random.randint(0,100,100) #生成[0-100)之间的100个数据,即 数据集 \n",
+    "bins=np.arange(0,101,10) #设置连续的边界值，即直方图的分布区间[0,10),[10,20)... \n",
     "plt.hist(x,bins,color='fuchsia',alpha=0.5)#alpha设置透明度，0为完全透明 \n",
     "plt.xlabel('scores') \n",
     "plt.ylabel('count') \n",
@@ -840,7 +840,7 @@
     }
    ],
    "source": [
-    "import matplotlib as mpl\n",
+    "import matplotlib.pyplot as plt\n",
     "y = range(1,17)\n",
     "plt.bar(np.arange(16), y, alpha=0.5, width=0.5, color='yellow', edgecolor='red', label='The First Bar', lw=3)"
    ]
@@ -1691,7 +1691,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.7.0"
   },
   "toc": {
    "base_numbering": 1,
