--- a/第三回：布局格式定方圆.ipynb
+++ b/第三回：布局格式定方圆.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-11-01T10:58:25.798702Z",
@@ -21,8 +21,8 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "plt.rcParams['font.sans-serif'] = ['SimHei']\n",
-    "plt.rcParams['axes.unicode_minus'] = False"
+    "plt.rcParams['font.sans-serif'] = ['SimHei']   #用来正常显示中文标签\n",
+    "plt.rcParams['axes.unicode_minus'] = False   #用来正常显示负号"
    ]
   },
   {
@@ -695,7 +695,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.9.4"
   },
   "toc": {
    "base_numbering": 1,
