--- a/第四回：文字图例尽眉目.ipynb
+++ b/第四回：文字图例尽眉目.ipynb
@@ -34,8 +34,7 @@
     "| [`figtext`](https://matplotlib.org/api/_as_gen/matplotlib.pyplot.figtext.html#matplotlib.pyplot.figtext) | [`text`](https://matplotlib.org/api/_as_gen/matplotlib.figure.Figure.html#matplotlib.figure.Figure.text) | 在[`Figure`](https://matplotlib.org/api/_as_gen/matplotlib.figure.Figure.html#matplotlib.figure.Figure)的任意位置添加text. |\n",
     "| [`suptitle`](https://matplotlib.org/api/_as_gen/matplotlib.pyplot.suptitle.html#matplotlib.pyplot.suptitle) | [`suptitle`](https://matplotlib.org/api/_as_gen/matplotlib.figure.Figure.html#matplotlib.figure.Figure.suptitle) | 在 [`Figure`](https://matplotlib.org/api/_as_gen/matplotlib.figure.Figure.html#matplotlib.figure.Figure)添加title |\n",
     "| [`xlabel`](https://matplotlib.org/api/_as_gen/matplotlib.pyplot.xlabel.html#matplotlib.pyplot.xlabel) | [`set_xlabel`](https://matplotlib.org/api/_as_gen/matplotlib.axes.Axes.set_xlabel.html#matplotlib.axes.Axes.set_xlabel) | 在[`Axes`](https://matplotlib.org/api/axes_api.html#matplotlib.axes.Axes)的x-axis添加label |\n",
-    "| [`ylabel`](https://matplotlib.org/api/_as_gen/matplotlib.pyplot.ylabel.html#matplotlib.pyplot.ylabel) | [`set_ylabel`](https://matplotlib.org/api/_as_gen/matplotlib.axes.Axes.set_ylabel.html#matplotlib.axes.Axes.set_ylabel) | 在[`Axes`](https://matplotlib.org/api/axes_api.html#matplotlib.axes.Axes)的y-axis添加label |\n",
-    "| [`annotate`](https://matplotlib.org/api/_as_gen/matplotlib.pyplot.annotate.html#matplotlib.pyplot.annotate) | [`annotate`](https://matplotlib.org/api/_as_gen/matplotlib.axes.Axes.annotate.html#matplotlib.axes.Axes.annotate) | 向[`Axes`](https://matplotlib.org/api/axes_api.html#matplotlib.axes.Axes)的任意位置添加带有可选箭头的标注. |"
+    "| [`ylabel`](https://matplotlib.org/api/_as_gen/matplotlib.pyplot.ylabel.html#matplotlib.pyplot.ylabel) | [`set_ylabel`](https://matplotlib.org/api/_as_gen/matplotlib.axes.Axes.set_ylabel.html#matplotlib.axes.Axes.set_ylabel) | 在[`Axes`](https://matplotlib.org/api/axes_api.html#matplotlib.axes.Axes)的y-axis添加label |"
    ]
   },
   {
@@ -1885,12 +1884,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "## 参考资料\n",
-    "[1.Python学习笔记（4）——Matplotlib中的annotate（注解）的用法](https://blog.csdn.net/leaf_zizi/article/details/82886755)"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1910,7 +1908,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.7.0"
   },
   "toc": {
    "base_numbering": 1,
